--- a/Client/app/src/main/res/layout/row.xml
+++ b/Client/app/src/main/res/layout/row.xml
@@ -18,6 +18,18 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/id"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
