--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal|center_vertical"
-        app:layout_constraintBottom_toTopOf="@id/button"
+        app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/products">
@@ -49,12 +49,11 @@
     </TableRow>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/back"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         android:backgroundTint="@color/colorPrimary"
-        android:onClick="backButton"
         android:text="Back"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
