--- a/Client/app/src/main/res/layout/row.xml
+++ b/Client/app/src/main/res/layout/row.xml
@@ -19,36 +19,36 @@
 
         <TextView
             android:id="@+id/id"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:gravity="start|center_vertical"
             android:maxLines="1"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/price"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center_vertical"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:gravity="center_vertical|end"
             android:textColor="#FF0000"
             android:textColorHint="@color/colorPrimary"
-            android:textSize="30sp" />
+            android:textSize="25sp" />
 
     </LinearLayout>
 
