--- a/Client/app/src/main/res/layout/activity_transaction_details.xml
+++ b/Client/app/src/main/res/layout/activity_transaction_details.xml
@@ -39,7 +39,7 @@
             android:text="Total: " />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/sumproducts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5€"
