--- a/Client/app/src/main/res/layout/row.xml
+++ b/Client/app/src/main/res/layout/row.xml
@@ -40,7 +40,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
