--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -77,18 +77,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/totalrow">
 
-        <Button
-            android:id="@+id/discountbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="Select a Discount"
-            android:textColor="#FFFFFF" />
+        <SeekBar
+            android:id="@+id/discountSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/selectedDiscountText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="No Discount Selected" />
 
@@ -108,8 +107,9 @@
 
         <Button
             android:id="@+id/selectVoucherButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
             android:text="Select a Voucher"
             android:textColor="#FFFFFF" />
@@ -118,8 +118,9 @@
             android:id="@+id/selectedVoucherText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="No Vouchher selected" />
+            android:text="No Voucher selected" />
 
     </TableRow>
 
