--- a/Client/app/src/main/res/layout/content_qr_code.xml
+++ b/Client/app/src/main/res/layout/content_qr_code.xml
@@ -10,8 +10,8 @@
     <ImageView
         android:id="@+id/qr"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +21,8 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="Back"
         android:textColor="#FFFFFF"
